# LearningRepo

ExpressJsProject/: .gitignore  app.js  package-lock.json  package.json
ExpressJsProject/common/: mongoQuery.js
ExpressJsProject/config/: db.js
ExpressJsProject/controller/: itemController.js
ExpressJsProject/dao/: itemDao.js
ExpressJsProject/enums/: httpEnum.js  responseMessageEnum.js
ExpressJsProject/models/: item.js  items.js
ExpressJsProject/routes/: itemRoutes.js  items.js
ExpressJsProject/service/: itemService.js
ExpressJsProject/utils/: appResponse.js  errorHandler.js  multer.js
poetry_project_structure/: README.md  pyproject.toml
poetry_project_structure/project_structure_generator_vaishali/: generator.py
project_structure_generator/: README.md  setup.py
project_structure_generator/project_structure_generator/: README.md  generator.py  setup.py
project_structure_generator/project_structure_generator/project_structure_generator/: generator.py
pythonPackageDemo/: setup.py
pythonPackageDemo/backend/: create_structure.py  main.py
pythonProject/: main.py  pyproject.toml
